--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -9,7 +9,7 @@ app_playlists:
   path: /playlists
   controller: App\Controller\UserController::playlists
 app_playlists_tracks:
-  path: /playlists/tracks/{playlistId}
+  path: /playlists/tracks/{playlist_id}/{page}
   controller: App\Controller\UserController::playlistTracks
   requirements:
     playlistId: '\w+'
